# ocaml-gcloud

./: .dir-locals.el  .gitignore  .ocamlformat  LICENSE  Makefile  README.md  auth.ml  big_query.ml  dune-project  error.ml  esy.json  flake.nix  gcloud-cli.opam  gcloud-melange.opam  gcloud.opam  gcloud.opam.locked  gcloud.opam.locked.example  jbuild  onix-lock-dev.json  onix-lock.json  storage.ml
.github/workflows/: main.yaml
esy.lock/: index.json
esy.lock/overrides/opam__s__base_opam__c__v0.10.0_opam_override/: package.json
esy.lock/overrides/opam__s__base_opam__c__v0.10.0_opam_override/files/: base-v0.10.0.patch
esy.lock/overrides/opam__s__ssl_opam__c__0.5.5_opam_override/: package.json
src/: auth.ml  big_query.ml  big_query.mli  big_query_dsl.ml  big_query_util.ml  cli.ml  common.ml  compute.ml  container.ml  dune  error.ml  kms.ml  kms.mli  logging.ml  pub_sub.ml  pub_sub.mli  secretmanager.ml  stackdriver_errors.ml  storage.ml  util.ml
src-cli/: cli.ml  cli_logs.ml  dune  main.ml
src-shared/: big_query_dsl.ml  dune
test/: compute.ml  container.ml  dune  secretmanager.ml  stackdriver_errors.ml  test_main.ml
