opam-version: "1.2"
name: "gcloud-melange"
version: "0.1"
maintainer: "Matt Bray <matt@aestheticintegration.com>"
            author: "Matt Bray <matt@aestheticintegration.com>"
homepage: "https://github.com/aestheticintegration/ocaml-gcloud"
bug-reports: "https://github.com/aestheticintegration/ocaml-gcloud/issues"
synopsis: "Bindings to Google Cloud Platform APIs"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "melange"
]
