opam-version: "1.2"
name: "gcloud"
version: "0.1"
maintainer: "Matt Bray <matt@aestheticintegration.com>"
author: "Matt Bray <matt@aestheticintegration.com>"
homepage: "https://github.com/aestheticintegration/ocaml-gcloud"
bug-reports: "https://github.com/aestheticintegration/ocaml-gcloud/issues"
synopsis: "Bindings to Google Cloud Platform APIs"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "alcotest" {test}
  "alcotest-lwt" {test}
  "base64"
  "cohttp"
  "cohttp-lwt-unix"
  "containers"
  "cstruct"
  "dune"
  "ezgzip"
  "jose"
  "logs"
  "lwt"
  "lwt_ssl"
  "ppx_deriving_yojson"
  "ppx_here" {test}
  "ssl"
  "x509" { >= "0.12.0" } # Required for the ~sloppy:true arg becoming the default
  "yojson"
]
