(library
 (name gcloud)
 (public_name gcloud)
 (modules :standard \ cli)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  gcloud_shared
  base64
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  containers
  cstruct
  ezgzip
  jose
  logs
  logs.lwt
  ppx_deriving_yojson.runtime
  ptime
  ptime.clock.os
  x509
  yojson
  lwt))

(executable
 (name cli)
 (public_name ocaml-gcloud-cli)
 (modules cli)
 (package gcloud)
 (libraries gcloud))
