(executable
 (name test_main)
 (modules test_main)
 (preprocess (pps ppx_here))
 (libraries alcotest alcotest-lwt gcloud_tests logs.fmt mirage-crypto-rng.unix))

(library
 (name gcloud_tests)
 (preprocess (pps ppx_here))
 (modules (:standard \ test_main))
 (libraries alcotest alcotest-lwt gcloud))

(alias
 (name runtest)
 (action (run ./test_main.exe)))
